--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "glob": "^8.1.0",
-    "vite": "^4.0.5"
+    "vite": "^4.0.5",
+    "glob": "^8.1.0"
   },
   "author": "Viktor Svertoka <victor.svertoka@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@vimeo/player": "^2.20.1",
-    "lodash.throttle": "^4.1.1",
-    "simplelightbox": "^2.14.2",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
   }
