--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "glob": "^8.1.0",
-    "vite": "^4.0.5"
+    "vite": "^4.0.5",
+    "glob": "^8.1.0"
   },
   "author": "Viktor Svertoka <victor.svertoka@gmail.com>",
   "license": "ISC",
